Address sizing issues visible on main landing page. (#121)
* Allow heading above subtitle to remain at medium page sizes.

* Shorten overall site title to shrink top menubar.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10611,7 +10611,7 @@ a.has-text-danger-dark:hover,a.has-text-danger-dark:focus {
 
 
 @media screen and (max-width: 1408px) {
-    #hero-image, .hero-text {
+    #hero-image, .hero-text.subtitle {
         display: none !important;
     }
     #hero-small-image {
@@ -10684,6 +10684,9 @@ a.has-text-danger-dark:hover,a.has-text-danger-dark:focus {
 @media screen and (max-width: 768px) {
     .hero.is-white.is-bold .navbar-menu {
         background-image: linear-gradient(141deg, #e8e3e4 0%, #fff 71%, #fff 100%);
+    }
+    .hero-text {
+        display: none !important;
     }
 }
 
